--- a/bower.json
+++ b/bower.json
@@ -2,11 +2,8 @@
   "name": "club-manager",
   "description": "",
   "main": "",
-  "authors": [
-    "Lois Choi <loisch22@gmail.com>"
-  ],
   "license": "MIT",
-  "homepage": "https://github.com/loisch22/job-list",
+  "homepage": "",
   "ignore": [
     "**/.*",
     "node_modules",
@@ -16,5 +13,8 @@
   ],
   "dependencies": {
     "bootstrap": "4.0.0-alpha.6"
-  }
+  },
+  "authors": [
+    "Lois Choi <loisch22@gmail.com>"
+  ]
 }
