--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "angularfire2": "^4.0.0-rc.0",
     "core-js": "^2.4.1",
+    "firebase": "^4.4.0",
+    "promise-polyfill": "6.0.2",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
@@ -42,5 +45,8 @@
     "ts-node": "~2.0.0",
     "tslint": "~4.5.0",
     "typescript": "~2.2.0"
-  }
+  },
+  "description": "#### _An application that helps users view and filter Boys and Girls Club locations. September 22, 2017_",
+  "main": "karma.conf.js",
+  "author": ""
 }
